--- a/src/app/main/user/add-user/add-user.component.html
+++ b/src/app/main/user/add-user/add-user.component.html
@@ -14,8 +14,8 @@
         </div>
         <div class="col-md-4">
             <div class="label text-color">{{'user.email' | translate}} <span class="required-title">*</span></div>
-            <div class="input-data">
-                <input type="text" formControlName="email" [readonly]="id != null">
+            <div class="input-data" [ngClass]="{'hidden-color' : id != null}">
+                <input type="text" formControlName="email" [readonly]="id != null" [ngClass]="{'hidden-color' : id != null}">
             </div>
             <div *ngIf="submitted && f.email.errors" class="invalid">
               <div *ngIf="f.email.errors.required">Email không được để trống</div>
@@ -43,8 +43,8 @@
         </div>
         <div class="col-md-4">
           <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
-          <div>
-            <p-dropdown 
+          <div [ngClass]="{'input-data hidden-color' : id != null}">
+            <p-dropdown *ngIf="!id"
               panelStyleClass="font"
               [options]="orgList" 
               formControlName="organizationId" 
@@ -53,9 +53,9 @@
               placeholder="Chọn tổ chức" 
               [filter]="true" 
               filterBy="name" 
-              [showClear]="id != null?false:true"
-              [readonly]="id != null"  
+              [showClear]="true"
               ></p-dropdown>
+              <input *ngIf="id" type="text" formControlName="organizationName" [readonly]="true" class="hidden-color">
           </div>
             <div *ngIf="submitted && f.organizationId.errors" class="invalid">
               <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
