--- a/src/app/main/user/infor-user/infor-user.component.html
+++ b/src/app/main/user/infor-user/infor-user.component.html
@@ -42,8 +42,9 @@
       </div>
       <div class="col-md-4">
         <div class="label text-color">{{'organization' | translate}} <span class="required-title">*</span></div>
-        <div>
-        <p-dropdown 
+        <div class="input-data hidden-color">
+          <input type="text" formControlName="organizationName" [readonly]="true" class="hidden-color">
+        <!-- <p-dropdown 
           panelStyleClass="font"
           class="hidden-color"
           [options]="orgList" 
@@ -55,16 +56,17 @@
           filterBy="name" 
           [showClear]="false"
           [readonly]="true"
-          ></p-dropdown>
+          ></p-dropdown> -->
         </div>
         <div *ngIf="submitted && f.organizationId.errors" class="invalid">
           <div *ngIf="f.organizationId.errors.required">Tổ chức không được để trống</div>
-        </div>
+        </div> 
       </div>
       <div class="col-md-4">
       <div class="label text-color">Vai trò <span class="required-title">*</span></div>
-      <div>
-        <p-dropdown 
+      <div class="input-data hidden-color">
+        <input type="text" formControlName="roleName" [readonly]="true" class="hidden-color">
+        <!-- <p-dropdown 
         panelStyleClass="font"
         [options]="roleList" 
         formControlName="role" 
@@ -74,7 +76,7 @@
         [filter]="true" 
         filterBy="name" 
         [readonly]="true"
-        ></p-dropdown>
+        ></p-dropdown> -->
       </div>
       <div *ngIf="submitted && f.role.errors" class="invalid">
         <div *ngIf="f.role.errors.required">Vai trò không được để trống</div>
