--- a/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
+++ b/src/app/main/contract/shared/model/sample-contract/sample-contract.component.scss
@@ -223,7 +223,8 @@
 
   .name-sig-img-daky {
     position: absolute;
-    background-color: white;
+    background-color: yellow;
+    border-radius: 5px;
     top: -15px;
     left: 6px;
     padding: 0 4px;
