--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/determine-signer/determine-signer.component.html
@@ -18,7 +18,7 @@
           <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
             <input class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                   [(ngModel)]="d.ordering">
+                   [(ngModel)]="d.ordering" [disabled]="getOriganzationReviewer().length == 1">
             <div class="col-md-10 participants--input" style="display: flex">
               <div class="participants__name">
                 <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
