--- a/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
+++ b/src/app/main/contract/shared/model/determine-signer/determine-signer.component.html
@@ -19,7 +19,7 @@
           <div class="participants--content" *ngFor="let d of getOriganzationReviewer(); let index = index">
             <input [id]="'ordering-organzation-view-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event,'ordering-organzation-view-' + index)" style="width: 25px; height: 25px" type="number"
                    [(ngModel)]="d.ordering"
-                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getOriganzationReviewer().length == 1">
             <div class="col-md-10 participants--input" style="display: flex">
               <div class="participants__name">
                 <div class="label text-color">{{'user.name' | translate}}: <span class="required-title">*</span></div>
@@ -67,7 +67,7 @@
           <div class="participants--content" *ngFor="let d of getOriganzationSignature(); let index = index">
             <input [id]="'ordering-sign-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event,'ordering-sign-' + index)" style="width: 25px; height: 25px" type="number"
                    [(ngModel)]="d.ordering"
-                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                   oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getOriganzationSignature().length == 1">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
                 <div class="participants__name">
@@ -146,7 +146,7 @@
           <div class="label">{{'user.doc' | translate}}</div>
           <div class="participants--content" *ngFor="let d of getOriganzationDocument(); let index = index">
             <input [id]="'ordering-doc-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event, 'ordering-doc-' + index)" style="width: 25px; height: 25px" type="number"
-                   [(ngModel)]="d.ordering"
+                   [(ngModel)]="d.ordering" [disabled]="getOriganzationDocument().length == 1"
                    oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
             <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
               <div class="participants--input" style="display: flex">
@@ -291,7 +291,7 @@
             <div class="label">{{'user.view' | translate}}</div>
             <div class="participants--content" *ngFor="let d of getPartnerReviewer(item); let index = index">
               <input [id]="'ordering-view-' + index" class="col-md-1 contract-total" (focusout)="onChangeValue($event,'ordering-view-' + index)" style="width: 25px; height: 25px" type="number"
-                     [(ngModel)]="d.ordering"
+                     [(ngModel)]="d.ordering" [disabled]="getPartnerReviewer(item).length == 1"
                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
               <div class="col-md-10 participants--input">
                 <div class="participants__name">
@@ -328,7 +328,7 @@
             <div class="participants--content" *ngFor="let d of getPartnerSignature(item); let index = index">
               <input [id]="'ordering-sign-partner-' + index" (focusout)="onChangeValue($event,'ordering-sign-partner-' + index)" class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
                      [(ngModel)]="d.ordering"
-                     oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                     oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getPartnerSignature(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -403,7 +403,7 @@
             <div class="participants--content" *ngFor="let d of getPartnerDocument(item); let index = index">
               <input [id]="'ordering-partner-doc-' + index" (focusout)="onChangeValue($event, 'ordering-partner-doc-' + index)" class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
                      [(ngModel)]="d.ordering"
-                     oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');">
+                     oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" [disabled]="getPartnerDocument(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
@@ -467,7 +467,7 @@
             <div class="participants--content" *ngFor="let d of getPartnerSignature(item); let index = index">
               <input [id]="'ordering-sign-partner-' + index" (focusout)="onChangeValue($event, 'ordering-sign-partner-' + index)" class="col-md-1 contract-total" style="width: 25px; height: 25px" type="number"
                      oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');"
-                     [(ngModel)]="d.ordering">
+                     [(ngModel)]="d.ordering" [disabled]="getPartnerSignature(item).length == 1">
               <div class="col-md-10 participants__content--input" style="display: flex; flex-direction: column">
                 <div class="participants--input" style="display: flex">
                   <div class="participants__name">
