--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -83,9 +83,9 @@
   </div>
 
   <div class="footer-infor-contract">
-    <button (click)="saveDraft()" type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate
+    <button (click)="next('luu_nhap')" type="button" name="next" class="next draft-button">{{'btn.save-draff' | translate
       }}</button>
-    <button (click)="next()" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate
+    <button (click)="next('chuyen_buoc')" type="button" name="next" class="next action-button pull-right">{{'btn.next' | translate
       }}</button>
   </div>
 
