--- a/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
+++ b/src/app/main/contract-template/detail-contract-template/detail-contract-template.component.html
@@ -1,5 +1,5 @@
 
-<ng-template [ngIf]="datas?.is_data_contract?.status!=32 && roleAccess && datas?.is_data_contract">
+<ng-template [ngIf]="!roleMess">
   <div class="sample-contract row">
   <!--  information contract-->
     <div class="col-md-3 sample-contract__information" style="background-color: white;">
