--- a/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
+++ b/src/app/main/contract/form-contract/infor-contract-form/infor-contract-form.component.html
@@ -12,7 +12,7 @@
     <div class="form-group">
       <div class="label_item">Số hợp đồng </div>
       <div class="input-group">
-        <input #nameContract type="text" [(ngModel)]="this.datasForm.contract_no" class="input_text" placeholder="Nhập số hợp đồng" />
+        <input type="text" [(ngModel)]="this.datasForm.contract_no" maxlength="32" class="input_text" placeholder="Nhập số hợp đồng" oninput="this.value = this.value.replace(/[^0-9.]/g, '', /[^\d*[.]?\d*$]/g).replace(/(\..*?)\..*/g, '$1');" />
       </div>
     </div>
     <div class="form-group">
@@ -76,7 +76,7 @@
     <div class="form-group">
       <div class="label_item">Ngày hết hạn ký <span class="require_star">*</span></div>
       <div>
-        <p-calendar [(ngModel)]="this.datasForm.end_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
+        <p-calendar [(ngModel)]="this.datasForm.sign_time" [minDate]="minDate" [showIcon]="true" [readonlyInput]="true"
           aria-placeholder="chọn ngày hết hạn" dateFormat="dd/mm/yy"></p-calendar>
       </div>
     </div>
