--- a/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
+++ b/src/app/main/contract-signature/components/contract-coordination/shared/model/confirm-info-contract/confirm-info-contract.component.html
@@ -6,9 +6,9 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
-                        <div class="label_item">Tên file hợp đồng</div>
+                        <div class="label_item">Tên hợp đồng</div>
                         <div>
-                            <div [innerHTML]="this.datas.file_name" class="input_text"></div>
+                            <div [innerHTML]="isFileName" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -18,7 +18,7 @@
                     <div class="form-group">
                         <div class="label_item">Ngày hết hạn ký</div>
                         <div>
-                            <div [innerHTML]="this.datas.sign_time | date: 'dd/MM/yyyy'" class="input_text"></div>
+                            <div [innerHTML]="datas.is_data_contract.sign_time | date: 'dd/MM/yyyy'" class="input_text"></div>
                         </div>
                     </div>
                 </div>
@@ -29,7 +29,7 @@
             <div class="form-group">
                 <div class="label_item">Lời nhắn</div>
                 <div>
-                    <div [innerHTML]="this.datas.notes" class="input_text"></div>
+                    <div [innerHTML]="datas.is_data_contract.notes" class="input_text"></div>
                 </div>
             </div>
         </div>
